# data-freezer

./: .gitignore  README.md  VISION.md  pyproject.toml
.github/workflows/: python-app.yml
src/data_freezer/: __main__.py  archive_command.py  cli.py  doctor_command.py  restore_command.py  search_command.py  setup_command.py
src/data_freezer/utils/: archive_table_db.py  db_util.py  deepfreeze.py  file_table_db.py  workspace_archiver.py  workspace_paths.py  workspace_searcher.py  workspace_utils.py
test_data/source_dir/docs/: already.txt
test_data/work_dir/existing_workspace/.data_freeze/: data_freeze.sqlite
tests/: test_workspace_archiver.py
